--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,17 @@
         <maven.compiler.release>24</maven.compiler.release>
         <exec.mainClass>edu.br.ifpr.EnterpriseProject</exec.mainClass>
     </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>7.0.0.Final</version>
+        </dependency>
+    </dependencies>
 </project>
